fix: minor mobile overflow issue

--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -1,6 +1,7 @@
 .post
     margin-top: 125px
     width: 810px
+    overflow: auto
 
     > .title
         text-align: center
